test_regress/t/t_fork_dynscope_unsup.out
%Error: t/t_fork_dynscope_unsup.v:20:7: Writing to an inout variable of a function after a timing control is not allowed
                                      : ... note: In instance 't'
   20 |       p = #1 1;   
      |       ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
